@@ -32,3 +32,4 @@ Guilherme Silveira <xguiga@gmail.com>
 Flavio Ceolin <flavio.ceolin@profusion.mobi>
 Daniel Zaoui <daniel.zaoui@yahoo.com>
 Daniel Willmann <d.willmann@samsung.com>
+Robert David <robert.david.public@gmail.com>
